# Career-agent-

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.base.json  turbo.json
docs/: API.md  ARCHITECTURE.md  BUILD_PLAN.md  BUILD_PROMPT.md  DESIGN_PROMPT.md  FRONTEND.md  GMAIL_IMPORT.md  GMAIL_SETUP.md  MILESTONES.md  PRD.md  PROMPTS.md  RUNNING.md  SCHEMA.md  SECURITY.md  SETUP.md
examples/: sample_profile.json
job_agent/: __init__.py  cli.py  db.py  models.py  service.py
legacy/: config.yaml  pyproject.toml  requirements.txt
legacy/.github/workflows/: ci.yml  daily-digest.yml
legacy/docs_python/: ARCHITECTURE.md
legacy/examples/: sample_cover_letter.txt
legacy/job_agent/: cli.py  config.py  service.py
legacy/job_agent/ai/: __init__.py  provider.py  semantic.py
legacy/job_agent/analytics/: __init__.py  analytics.py
legacy/job_agent/automation/: __init__.py  apply.py
legacy/job_agent/integrations/: __init__.py
legacy/job_agent/location/: __init__.py
legacy/job_agent/matching/: __init__.py  scorer.py
legacy/job_agent/optimiser/: __init__.py  ats.py  resume_optimiser.py
legacy/job_agent/profile/: __init__.py  cover_letter.py  skills.py
legacy/job_agent/reports/: __init__.py  daily.py
legacy/job_agent/search/: __init__.py  indeed.py  linkedin.py  rss.py  sample.py  seek.py
legacy/job_agent/tracker/: tracker.py
legacy/job_agent/web/: app.py
legacy/job_agent/web/templates/: base.html  dashboard.html  job.html
tests/: test_pipeline.py
(+67 files in other folders)
